--- a/_config.dev.yml
+++ b/_config.dev.yml
@@ -82,9 +82,9 @@ analytics:
 author:
   name             : "Ssu Chiu"
   avatar           : "profile.jpeg"
-  bio              : ""
+  bio              : "Machine Learning <br> Software Engineer"
   location         : "TW, Taipei"
-  employer         :
+  employer         : 
   pubmed           :
   googlescholar    : "https://scholar.google.com/citations?hl=zh-TW&user=-vMTGNsAAAAJ&view_op=list_works&gmla=AJsN-F5TL7UwW_UVX-6sC_xGT9ooi2Ck6V_4LlhuDZyCt3rZsf9T2EfTF2Yfzsn9YiNPkAtFei6FV6O-Skmf6JOCdqN6AFmAJRO2qTO8J5hPbMmUXjudOk9vL-7jg1rmOuy4MHXKT5ch"
   email            : "chiussu0320@gmail.com"
@@ -255,7 +255,7 @@ sass:
 permalink: /:categories/:title/
 # paginate: 5 # amount of posts to show
 # paginate_path: /page:num/
-timezone: America/Los_Angeles # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: Asia/Taipei # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 
 # Plugins
