--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Ssu Chiu"
   avatar           : "profile.jpeg"
-  bio              : "Machine Learning <br> Software Engineer"
+  bio              : "Machine Learning Engineer@LINE+"
   location         : "TW, Taipei"
   employer         :
   pubmed           :
