--- a/_config.dev.yml
+++ b/_config.dev.yml
@@ -82,11 +82,11 @@ analytics:
 author:
   name             : "Ssu Chiu"
   avatar           : "profile.jpeg"
-  bio              : "Machine Learning Engineer@LINE+"
+  bio              : "MLE@LINE+"
   location         : "TW, Taipei"
   employer         : 
   pubmed           :
-  googlescholar    : "https://scholar.google.com/citations?hl=zh-TW&user=-vMTGNsAAAAJ&view_op=list_works&gmla=AJsN-F5TL7UwW_UVX-6sC_xGT9ooi2Ck6V_4LlhuDZyCt3rZsf9T2EfTF2Yfzsn9YiNPkAtFei6FV6O-Skmf6JOCdqN6AFmAJRO2qTO8J5hPbMmUXjudOk9vL-7jg1rmOuy4MHXKT5ch"
+  googlescholar    : 
   email            : "chiussu0320@gmail.com"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
