--- a/_config.yml
+++ b/_config.yml
@@ -75,18 +75,18 @@ social:
 analytics:
   provider               :  "google" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          : "G-9R7NQJFP08"
+    tracking_id          :  "G-9R7NQJFP08"
 
 
 # Site Author
 author:
   name             : "Ssu Chiu"
   avatar           : "profile.jpeg"
-  bio              : "Machine Learning Engineer@LINE+"
+  bio              : "MLE@LINE+"
   location         : "TW, Taipei"
   employer         :
   pubmed           :
-  googlescholar    : "https://scholar.google.com/citations?hl=zh-TW&user=-vMTGNsAAAAJ&view_op=list_works&gmla=AJsN-F5TL7UwW_UVX-6sC_xGT9ooi2Ck6V_4LlhuDZyCt3rZsf9T2EfTF2Yfzsn9YiNPkAtFei6FV6O-Skmf6JOCdqN6AFmAJRO2qTO8J5hPbMmUXjudOk9vL-7jg1rmOuy4MHXKT5ch"
+  googlescholar    : 
   email            : "chiussu0320@gmail.com"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
